patient admin auth working